所有病例页面

--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -95,16 +95,15 @@
                     </ul>
                 </li>
                 <li class=" ">
-                    <a data-toggle="collapse" title="收藏夹" href="#favorites1">
+                    <a data-toggle="collapse" title="病例管理" href="#cases">
                         <em class="icon-folder"></em>
                         <span>病例管理</span>
                     </a>
-                    <ul class="nav sidebar-subnav collapse" id="favorites1">
-                        <li class="sidebar-subnav-header">微博管理</li>
-                        <li id="newFavortes" class=" ">
-                            <a title="+ 新建" href="javascript:void(0);"
-                               onclick="locationUrl('/newFavorites','newFavortes')">
-                                <span>+ 新建</span>
+                    <ul class="nav sidebar-subnav collapse" id="cases">
+                        <li class="sidebar-subnav-header">病例管理</li>
+                        <li id="weibo" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/case/list')">
+                                <span>—  所有病例</span>
                             </a>
                         </li>
                     </ul>
