--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -101,9 +101,14 @@
                     </a>
                     <ul class="nav sidebar-subnav collapse" id="cases">
                         <li class="sidebar-subnav-header">病例管理</li>
-                        <li id="weibo" class=" ">
+                        <li id="case" class=" ">
                             <a title="" href="javascript:void(0);" onclick="locationUrl('/case/list')">
                                 <span>—  所有病例</span>
+                            </a>
+                        </li>
+                        <li id="case2" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/case/newCase')">
+                                <span>—  新增病例</span>
                             </a>
                         </li>
                     </ul>
