--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,127 +1,135 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-  <meta name="description" content="Bootstrap Admin App + jQuery"/>
-  <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin"/>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+    <meta name="description" content="Bootstrap Admin App + jQuery"/>
+    <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin"/>
     <title>万怡 | 医会宝运营系统</title>
-  <link rel="shortcut icon" type="image/png" th:href="@{/images/favicon.png}"></link>
+    <link rel="shortcut icon" type="image/png" th:href="@{/images/favicon.png}"></link>
 
-  <link rel="stylesheet" th:href="@{/vendor/fontawesome/css/font-awesome.min.css}"></link>
-  <link rel="stylesheet" th:href="@{/vendor/simple-line-icons/css/simple-line-icons.css}"></link>
-  <link rel="stylesheet" th:href="@{/media/css/bootstrap.css}" id="bscss"></link>
-  <link rel="stylesheet" th:href="@{/media/css/app.css}" id="maincss"></link>
-  <link rel="stylesheet" th:href="@{/media/css/theme-i.css}" id="maincss"></link>
+    <link rel="stylesheet" th:href="@{/vendor/fontawesome/css/font-awesome.min.css}"></link>
+    <link rel="stylesheet" th:href="@{/vendor/simple-line-icons/css/simple-line-icons.css}"></link>
+    <link rel="stylesheet" th:href="@{/media/css/bootstrap.css}" id="bscss"></link>
+    <link rel="stylesheet" th:href="@{/media/css/app.css}" id="maincss"></link>
+    <link rel="stylesheet" th:href="@{/media/css/theme-i.css}" id="maincss"></link>
     <style>
-        body {background: url("http://ww2.sinaimg.cn/mw690/d8600879gw1fb44zd9mu6j20fo0kndh0.jpg") no-repeat center fixed;background-size:cover; -webkit-background-size: cover;}
+        body {
+            background: url("http://ww2.sinaimg.cn/mw690/d8600879gw1fb44zd9mu6j20fo0kndh0.jpg") no-repeat center fixed;
+            background-size: cover;
+            -webkit-background-size: cover;
+        }
+
         /*http://ww2.sinaimg.cn/mw690/d8600879gw1fb44zd9mu6j20fo0kndh0.jpg*/
         /*http://oimas2nso.bkt.clouddn.com/web_wechat_login_bg.jpg*/
     </style>
- </head>
-  <body>
-    <div class="wrapper">
-      <div class="block-center mt-xl wd-xl" style="margin-top: 130px !important;">
-         <div class="panel panel-dark panel-flat">
+</head>
+<body>
+<div class="wrapper">
+    <div class="block-center mt-xl wd-xl" style="margin-top: 130px !important;">
+        <div class="panel panel-dark panel-flat">
             <div class="panel-heading text-center" style="padding: 12px 15px;">
-               <a href="/index">
-                  <img src="/img/logo_name_big.png" alt="Image" class="block-center img-rounded" style="width: 220px; height: 24px;"/>
-               </a>
+                <a href="/index">
+                    <img src="/img/logo_name_big.png" alt="Image" class="block-center img-rounded"
+                         style="width: 220px; height: 24px;"/>
+                </a>
             </div>
             <div class="panel-body" id="loginPage">
-               <!--<p class="text-center pv">登录</p>-->
-               <form id="form" data-parsley-validate="true" onsubmit="return false">
-                  <div class="form-group has-feedback">
-                     <input type="text" placeholder="账户名称" v-model="name" class="form-control" data-parsley-error-message="请输入账户名" required="required" />
-                     <span class="fa fa-envelope form-control-feedback text-muted"></span>
-                  </div>
-                  <div class="form-group has-feedback">
-                     <input type="password" placeholder="密码" v-model="password" class="form-control" data-parsley-error-message="请输入密码" required="required" />
-                     <span class="fa fa-lock form-control-feedback text-muted"></span>
-                  </div>
-                  <div class="clearfix">
-                     <div class="pull-right">
-                        <a href="/forgotpassword" class="text-muted">忘记密码？</a>
-                     </div>
-                  </div>
-                  <button v-on:click="login" class="btn btn-block btn-primary mt-lg">登录</button>
-               </form>
-               <!-- <p class="pt-lg text-center">社会化登录</p>
-               <div class="text-center">
-                  <a href="javascript:void(0);">
-                     <span class="fa-stack fa-2x mr"> <i class="fa fa-circle-thin fa-stack-2x"></i> <i class="fa fa-qq fa-stack-1x"></i>
-                     </span>
-                  </a>
-                  <a href="javascript:void(0);">
-                     <span class="fa-stack fa-2x">
-                        <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-weibo fa-stack-1x"></i>
-                     </span>
-                  </a>
-                  <a href="javascript:void(0);">
-                     <span class="fa-stack fa-2x ml">
-                        <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-wechat fa-stack-1x"></i>
-                     </span>
-                  </a>
-               </div> -->
-               <p></p>
-               <!--<div id="errorMsg" class="alert alert-danger text-center" style="display:none;"></div>-->
-               <!--<p class="pt-lg text-center">需要注册？</p>-->
-               <!--<a href="/register" class="btn btn-block btn-default">现在就注册</a>-->
+                <!--<p class="text-center pv">登录</p>-->
+                <form id="form" data-parsley-validate="true" onsubmit="return false">
+                    <div class="form-group has-feedback">
+                        <input type="text" placeholder="账户名称" v-model="name" class="form-control"
+                               data-parsley-error-message="请输入账户名" required="required"/>
+                        <span class="fa fa-envelope form-control-feedback text-muted"></span>
+                    </div>
+                    <div class="form-group has-feedback">
+                        <input type="password" placeholder="密码" v-model="password" class="form-control"
+                               data-parsley-error-message="请输入密码" required="required"/>
+                        <span class="fa fa-lock form-control-feedback text-muted"></span>
+                    </div>
+                    <div class="clearfix">
+                        <div class="pull-right">
+                            <a href="/forgotpassword" class="text-muted">忘记密码？</a>
+                        </div>
+                    </div>
+                    <button v-on:click="login" class="btn btn-block btn-primary mt-lg">登录</button>
+                </form>
+                <!-- <p class="pt-lg text-center">社会化登录</p>
+                <div class="text-center">
+                   <a href="javascript:void(0);">
+                      <span class="fa-stack fa-2x mr"> <i class="fa fa-circle-thin fa-stack-2x"></i> <i class="fa fa-qq fa-stack-1x"></i>
+                      </span>
+                   </a>
+                   <a href="javascript:void(0);">
+                      <span class="fa-stack fa-2x">
+                         <i class="fa fa-circle-thin fa-stack-2x"></i>
+                         <i class="fa fa-weibo fa-stack-1x"></i>
+                      </span>
+                   </a>
+                   <a href="javascript:void(0);">
+                      <span class="fa-stack fa-2x ml">
+                         <i class="fa fa-circle-thin fa-stack-2x"></i>
+                         <i class="fa fa-wechat fa-stack-1x"></i>
+                      </span>
+                   </a>
+                </div> -->
+                <p></p>
+                <!--<div id="errorMsg" class="alert alert-danger text-center" style="display:none;"></div>-->
+                <!--<p class="pt-lg text-center">需要注册？</p>-->
+                <!--<a href="/register" class="btn btn-block btn-default">现在就注册</a>-->
             </div>
-         </div>
-         <div class="p-lg text-center" style="padding: 25px !important;">
+        </div>
+        <div class="p-lg text-center" style="padding: 25px !important;">
             <span style="color: #FFFFFF;">&copy;</span>
             <span style="color: #FFFFFF;">2017</span>
             <span style="color: #FFFFFF;">-</span>
             <span style="color: #FFFFFF;">YiHuiBao</span>
             <br/>
             <span style="color: #FFFFFF;">songlinLuo@healife.com</span>
-         </div>
-      </div>
-   </div>
-  </body>
-    <script th:src="@{vendor/webjar/jquery.min.js}"></script>
-    <script th:src="@{vendor/webjar/vue.min.js}"></script>
-    <script th:src="@{vendor/webjar/vue-resource.min.js}"></script>
-    <script th:src="@{vendor/parsleyjs/dist/parsley.min.js}"></script>
+        </div>
+    </div>
+</div>
+</body>
+<script th:src="@{vendor/webjar/jquery.min.js}"></script>
+<script th:src="@{vendor/webjar/vue.min.js}"></script>
+<script th:src="@{vendor/webjar/vue-resource.min.js}"></script>
+<script th:src="@{vendor/parsleyjs/dist/parsley.min.js}"></script>
 
-   <script type='text/javascript'>
+<script type='text/javascript'>
     Vue.http.options.emulateJSON = true;
-        var loginPage = new Vue({
-            el: '#loginPage',
-            data: {
+    var loginPage = new Vue({
+        el: '#loginPage',
+        data: {
 //                'name': '',
 //                'password': ''
-                //测试用
-                'name': 'haha',
-                'password': '123'
-            },
-            methods: {
-            	login: function(event){
-            		var ok = $('#form').parsley().isValid({force: true});
-                     if(!ok){
-                     return;
-                     }
-                     var datas={
-                     name: this.name,
-                     password: this.password
-                     };
-                     this.$http.post('/user/login2',datas).then(function(response){
-                     if(response.data.rspCode == '000000'){
+            //测试用
+            'name': 'haha',
+            'password': '123'
+        },
+        methods: {
+            login: function (event) {
+                var ok = $('#form').parsley().isValid({force: true});
+                if (!ok) {
+                    return;
+                }
+                var datas = {
+                    name: this.name,
+                    password: this.password
+                };
+                this.$http.post('/user/login2', datas).then(function (response) {
+                    if (response.data.rspCode == '000000') {
                         window.open(response.data.data, '_self');
                         console.log(this.$router);
-                     } else {
+                    } else {
                         $("#errorMsg").html(response.data.rspMsg);
                         $("#errorMsg").show(300).delay(3000).hide(300);
-                     }
-                     }, function(response){
-                        console.log('error');
-                     })
+                    }
+                }, function (response) {
+                    console.log('error');
+                })
 //                    window.open("http://localhost:8080/index");
 //                    alert('Hello ' + this.name + '!')
-                }
             }
-        })
-    </script>
+        }
+    })
+</script>
 </html>
