--- a/src/main/resources/templates/caseOfIllness/newcaseofillness.html
+++ b/src/main/resources/templates/caseOfIllness/newcaseofillness.html
@@ -65,7 +65,8 @@
                     },
                     success: function(response){
                         if(response.rspCode == '000000'){
-                            toastr.success('收藏夹创建成功！', '操作成功');
+                            locationUrl('/case/list');
+                            toastr.success('新病例创建成功！', '操作成功');
                         }else{
                             toastr.error(response.rspMsg, '操作失败');
                         }
