添加视频背景

--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -32,7 +32,7 @@
                 </li>
                 <li class="nav-heading ">主导航</li>
                 <li class="" id="home">
-                    <a title="首页" href="javascript:void(0);" onclick="locationUrl('/standard/my/0','home')">
+                    <a title="首页" href="javascript:void(0);" onclick="locationUrl('/indexpage')">
                         <em class="icon-home"></em>
                         <span>首页</span>
                     </a>
@@ -47,22 +47,22 @@
                     <ul class="nav sidebar-subnav collapse" id="favorites">
                         <li class="sidebar-subnav-header">用户管理</li>
                         <li id="newFavortes" class=" ">
-                            <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list')">
+                            <a title="+ 普通用户" href="javascript:void(0);" onclick="locationUrl('/user2/list')">
                                 <span>—  普通用户</span>
                             </a>
                         </li>
                         <li id="newFavortes" class=" ">
-                            <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/wait')">
+                            <a title="+ 待认证用户" href="javascript:void(0);" onclick="locationUrl('/user2/list/wait')">
                                 <span>—  待认证用户</span>
                             </a>
                         </li>
                         <li id="newFavortes" class=" ">
-                            <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/authen')">
+                            <a title="+ 认证用户" href="javascript:void(0);" onclick="locationUrl('/user2/list/authen')">
                                 <span>—  认证用户</span>
                             </a>
                         </li>
                         <li id="newFavortes" class=" ">
-                            <a title="+ 新建" href="javascript:void(0);"
+                            <a title="+ 大咖用户" href="javascript:void(0);"
                                onclick="locationUrl('/newFavorites','newFavortes')">
                                 <span>—  大咖用户</span>
                             </a>
