--- a/src/main/resources/static/index/css/freelancer.css
+++ b/src/main/resources/static/index/css/freelancer.css
@@ -104,7 +104,7 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  background: #2C3E50;
+  background: rgba(44, 62, 80, 0.3);
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
