--- a/src/main/resources/templates/caseOfIllness/caseOfIllness.html
+++ b/src/main/resources/templates/caseOfIllness/caseOfIllness.html
@@ -1,7 +1,6 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="layout :: htmlhead" th:with="title='favorites'">
 
-
 </head>
 <body>
 <section>
@@ -11,22 +10,24 @@
     <table class="table table-bordered table-hover">
         <thead>
         <tr>
-            <th style='vertical-align: middle;text-align: center;'>序号</th>
-            <th style='vertical-align: middle;text-align: center;'>用户名(或昵称)</th>
-            <th style='vertical-align: middle;text-align: center;'>标题</th>
-            <th style='vertical-align: middle;text-align: center;'>主诉</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>序号</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>用户</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>标题</th>
+            <!--<th style='vertical-align: middle;text-align: center;'>主诉</th>
             <th style='vertical-align: middle;text-align: center;'>主诉图片</th>
             <th style='vertical-align: middle;text-align: center;'>查体</th>
             <th style='vertical-align: middle;text-align: center;'>查体图片</th>
             <th style='vertical-align: middle;text-align: center;'>医疗诊断</th>
             <th style='vertical-align: middle;text-align: center;'>医疗诊断图片</th>
             <th style='vertical-align: middle;text-align: center;'>随访</th>
-            <th style='vertical-align: middle;text-align: center;'>随访图片</th>
-            <th style='vertical-align: middle;text-align: center;'>发布时间</th>
-            <th style='vertical-align: middle;text-align: center;'>评论数</th>
-            <th style='vertical-align: middle;text-align: center;'>点赞数</th>
-            <th style='vertical-align: middle;text-align: center;'>是否热门</th>
-            <th style='vertical-align: middle;text-align: center;'>操作</th>
+            <th style='vertical-align: middle;text-align: center;'>随访图片</th>-->
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>内容</th>
+
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>发布时间</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>评论数</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>点赞数</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>热门</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>操作</th>
         </tr>
         </thead>
         <tbody>
@@ -34,46 +35,151 @@
             <td class="text-center" th:text="${case.id}"></td>
             <td th:text="${case.name == null ? case.nickName:case.name}" style="vertical-align: middle;text-align: center;"></td>
             <td th:text="${case.title}" style="word-break: break-all"></td>
-            <td th:text="${case.chiefComplain}" style="word-break: break-all"></td>
+
             <td>
-                <table>
-                    <div class="gallery cf" th:each="images, imageStatus:${case.chiefComplainImages}">
-                        <div th:if="${not #strings.isEmpty(case.chiefComplainImage)}">
-                            <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
-                        </div>
-                    </div>
+                <table class="table table-hover">
+                    <tr>
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">主诉</td>
+                        <td th:text="${case.chiefComplain}"></td>
+                    </tr>
+                    <tr th:if="${not #strings.isEmpty(case.chiefComplainImage)}">
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">主诉图片</td>
+                        <td>
+                            <table>
+                                <div class="gallery cf" th:each="images, imageStatus:${case.chiefComplainImages}">
+                                    <div>
+                                        <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
+                                    </div>
+                                </div>
+                            </table>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">查体</td>
+                        <td th:text="${case.bodyCheck}"></td>
+                    </tr>
+                    <tr th:if="${not #strings.isEmpty(case.bodyCheckImage)}">
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">查体图片</td>
+                        <td>
+                            <table>
+                                <div class="gallery cf" th:each="images, imageStatus:${case.bodyCheckImages}" style=" width:60px; height:30px; border:0px solid #FF6699; float:left">
+                                    <div>
+                                        <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
+                                    </div>
+                                </div>
+                            </table>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">医疗诊断</td>
+                        <td th:text="${case.medicalDiagnosis}"></td>
+                    </tr>
+                    <tr th:if="${not #strings.isEmpty(case.medicalDiagnosisImage)}">
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">医疗诊断图片</td>
+                        <td>
+                            <table>
+                                <div class="gallery cf" th:each="images, imageStatus:${case.medicalDiagnosisImages}">
+                                    <div>
+                                        <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
+                                    </div>
+                                </div>
+                            </table>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">随访</td>
+                        <td th:text="${case.followUp}"></td>
+                    </tr>
+                    <tr th:if="${not #strings.isEmpty(case.followUpImage)}">
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">随访图片</td>
+                        <td>
+                            <table>
+                                <div class="gallery cf" th:each="images, imageStatus:${case.followUpImages}">
+                                    <div>
+                                        <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
+                                    </div>
+                                </div>
+                            </table>
+                        </td>
+                    </tr>
+
+
                 </table>
             </td>
-            <td th:text="${case.bodyCheck}" style="word-break: break-all"></td>
-            <td>
-                <table>
-                    <div class="gallery cf" th:each="images, imageStatus:${case.bodyCheckImages}">
-                        <div th:if="${not #strings.isEmpty(case.bodyCheckImage)}">
-                            <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
-                        </div>
-                    </div>
-                </table>
-            </td>
-            <td th:text="${case.medicalDiagnosis}" style="word-break: break-all"></td>
-            <td>
-                <table>
-                    <div class="gallery cf" th:each="images, imageStatus:${case.medicalDiagnosisImages}">
-                        <div th:if="${not #strings.isEmpty(case.medicalDiagnosisImage)}">
-                            <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images == null?'':images}"/>
-                        </div>
-                    </div>
-                </table>
-            </td>
-            <td th:text="${case.followUp}" style="word-break: break-all"></td>
-            <td>
-                <table>
-                    <div class="gallery cf" th:each="images, imageStatus:${case.followUpImages}">
-                        <div th:if="${not #strings.isEmpty(case.followUpImage)}">
-                            <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images == null?'img/logo.jpg':images}"/>
-                        </div>
-                    </div>
-                </table>
-            </td>
+            <!-- <td style="display:block;/*内联对象需加*/
+                        width:100px;
+                        word-break:keep-all;/* 不换行 */
+                        white-space:nowrap;/* 不换行 */
+                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
+                        text-overflow:ellipsis;
+                        -o-text-overflow: ellipsis;">
+                 <a th:title = "${case.chiefComplain}">
+                     <nobr th:text="${case.chiefComplain}">
+                     </nobr>    　
+                 </a>
+             </td>
+
+             <td>
+                 <table>
+                     <div class="gallery cf" th:each="images, imageStatus:${case.chiefComplainImages}">
+                         <div th:if="${not #strings.isEmpty(case.chiefComplainImage)}">
+                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
+                         </div>
+                     </div>
+                 </table>
+             </td>
+             <td th:text="${case.bodyCheck}"
+                 style="display:block;/*内联对象需加*/
+                        word-break:keep-all;/* 不换行 */
+                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
+                        text-overflow:ellipsis;
+                        -o-text-overflow: ellipsis;"></td>
+             <td>
+                 <table>
+                     <div class="gallery cf" th:each="images, imageStatus:${case.bodyCheckImages}">
+                         <div th:if="${not #strings.isEmpty(case.bodyCheckImage)}">
+                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
+                         </div>
+                     </div>
+                 </table>
+             </td>
+             <td th:text="${case.medicalDiagnosis}"
+                 style="display:block;/*内联对象需加*/
+                        width:200px;
+                        word-break:keep-all;/* 不换行 */
+                        white-space:nowrap;/* 不换行 */
+                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
+                        text-overflow:ellipsis;
+                        -o-text-overflow: ellipsis;"></td>
+             <td>
+                 <table>
+                     <div class="gallery cf" th:each="images, imageStatus:${case.medicalDiagnosisImages}">
+                         <div th:if="${not #strings.isEmpty(case.medicalDiagnosisImage)}">
+                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images == null?'':images}"/>
+                         </div>
+                     </div>
+                 </table>
+             </td>
+             <td th:text="${case.followUp}"
+                 style="display:block;/*内联对象需加*/
+                        width:200px;
+                        word-break:keep-all;/* 不换行 */
+                        white-space:nowrap;/* 不换行 */
+                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
+                        text-overflow:ellipsis;
+                        -o-text-overflow: ellipsis;"></td>
+             <td>
+                 <table>
+                     <div class="gallery cf" th:each="images, imageStatus:${case.followUpImages}">
+                         <div th:if="${not #strings.isEmpty(case.followUpImage)}">
+                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images == null?'img/logo.jpg':images}"/>
+                         </div>
+                     </div>
+                 </table>
+             </td>-->
             <!--时间格式化-->
             <td th:text="${#calendars.format(case.createdAt,'yyyy/MM/dd HH:mm')}" style="white-space: nowrap"></td>
             <td th:text="${case.commentCount}" style="vertical-align: middle;text-align: center;"></td>
