--- a/src/main/resources/templates/caseOfIllness/caseOfIllness.html
+++ b/src/main/resources/templates/caseOfIllness/caseOfIllness.html
@@ -13,16 +13,7 @@
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>序号</th>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>用户</th>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>标题</th>
-            <!--<th style='vertical-align: middle;text-align: center;'>主诉</th>
-            <th style='vertical-align: middle;text-align: center;'>主诉图片</th>
-            <th style='vertical-align: middle;text-align: center;'>查体</th>
-            <th style='vertical-align: middle;text-align: center;'>查体图片</th>
-            <th style='vertical-align: middle;text-align: center;'>医疗诊断</th>
-            <th style='vertical-align: middle;text-align: center;'>医疗诊断图片</th>
-            <th style='vertical-align: middle;text-align: center;'>随访</th>
-            <th style='vertical-align: middle;text-align: center;'>随访图片</th>-->
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>内容</th>
-
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>发布时间</th>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>评论数</th>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>点赞数</th>
@@ -42,8 +33,8 @@
                         <td style="color: #136387; font-style: italic;font-weight:bold;">主诉</td>
                         <td>
                             <table>
-                                <div>
-                                    <span th:text="${case.chiefComplain}"></span>
+                                <div style="height:60px;overflow:auto;">
+                                    <span th:text="${case.chiefComplain}" ></span>
                                 </div>
                                 <div th:if="${not #strings.isEmpty(case.chiefComplainImage)}" class="gallery cf" th:each="images, imageStatus:${case.chiefComplainImages}" style=" width:60px; height:30px; border:0px solid #FF6699; float:left">
                                     <div>
@@ -58,7 +49,7 @@
                         <td style="color: #136387; font-style: italic;font-weight:bold;">查体</td>
                         <td>
                             <table>
-                                <div>
+                                <div style="height:60px;overflow:auto;">
                                     <span th:text="${case.bodyCheck}"></span>
                                 </div>
                                 <div th:if="${not #strings.isEmpty(case.bodyCheckImage)}" class="gallery cf" th:each="images, imageStatus:${case.bodyCheckImages}" style=" width:60px; height:30px; border:0px solid #FF6699; float:left">
@@ -70,12 +61,11 @@
                         </td>
                     </tr>
 
-
                     <tr>
-                        <td style="color: #136387; font-style: italic;font-weight:bold;">医疗诊断</td>
+                        <td style="color: #136387; font-style: italic;font-weight:bold;">诊断</td>
                         <td>
                             <table>
-                                <div>
+                                <div style="height:60px;overflow:auto;">
                                     <span th:text="${case.medicalDiagnosis}"></span>
                                 </div>
                                 <div th:if="${not #strings.isEmpty(case.medicalDiagnosisImage)}" class="gallery cf" th:each="images, imageStatus:${case.medicalDiagnosisImages}" style=" width:60px; height:30px; border:0px solid #FF6699; float:left">
@@ -92,7 +82,7 @@
                         <td style="color: #136387; font-style: italic;font-weight:bold;">随访</td>
                         <td>
                             <table>
-                                <div>
+                                <div style="height:60px;overflow:auto;">
                                     <span th:text="${case.followUp}"></span>
                                 </div>
                                 <div th:if="${not #strings.isEmpty(case.followUpImage)}" class="gallery cf" th:each="images, imageStatus:${case.followUpImages}" style=" width:60px; height:30px; border:0px solid #FF6699; float:left">
@@ -106,77 +96,6 @@
 
                 </table>
             </td>
-            <!-- <td style="display:block;/*内联对象需加*/
-                        width:100px;
-                        word-break:keep-all;/* 不换行 */
-                        white-space:nowrap;/* 不换行 */
-                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-                        text-overflow:ellipsis;
-                        -o-text-overflow: ellipsis;">
-                 <a th:title = "${case.chiefComplain}">
-                     <nobr th:text="${case.chiefComplain}">
-                     </nobr>    　
-                 </a>
-             </td>
-
-             <td>
-                 <table>
-                     <div class="gallery cf" th:each="images, imageStatus:${case.chiefComplainImages}">
-                         <div th:if="${not #strings.isEmpty(case.chiefComplainImage)}">
-                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
-                         </div>
-                     </div>
-                 </table>
-             </td>
-             <td th:text="${case.bodyCheck}"
-                 style="display:block;/*内联对象需加*/
-                        word-break:keep-all;/* 不换行 */
-                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-                        text-overflow:ellipsis;
-                        -o-text-overflow: ellipsis;"></td>
-             <td>
-                 <table>
-                     <div class="gallery cf" th:each="images, imageStatus:${case.bodyCheckImages}">
-                         <div th:if="${not #strings.isEmpty(case.bodyCheckImage)}">
-                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images}"/>
-                         </div>
-                     </div>
-                 </table>
-             </td>
-             <td th:text="${case.medicalDiagnosis}"
-                 style="display:block;/*内联对象需加*/
-                        width:200px;
-                        word-break:keep-all;/* 不换行 */
-                        white-space:nowrap;/* 不换行 */
-                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-                        text-overflow:ellipsis;
-                        -o-text-overflow: ellipsis;"></td>
-             <td>
-                 <table>
-                     <div class="gallery cf" th:each="images, imageStatus:${case.medicalDiagnosisImages}">
-                         <div th:if="${not #strings.isEmpty(case.medicalDiagnosisImage)}">
-                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images == null?'':images}"/>
-                         </div>
-                     </div>
-                 </table>
-             </td>
-             <td th:text="${case.followUp}"
-                 style="display:block;/*内联对象需加*/
-                        width:200px;
-                        word-break:keep-all;/* 不换行 */
-                        white-space:nowrap;/* 不换行 */
-                        overflow:hidden;/* 内容超出宽度时隐藏超出部分的内容 */
-                        text-overflow:ellipsis;
-                        -o-text-overflow: ellipsis;"></td>
-             <td>
-                 <table>
-                     <div class="gallery cf" th:each="images, imageStatus:${case.followUpImages}">
-                         <div th:if="${not #strings.isEmpty(case.followUpImage)}">
-                             <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images == null?'img/logo.jpg':images}"/>
-                         </div>
-                     </div>
-                 </table>
-             </td>-->
             <!--时间格式化-->
             <td th:text="${#calendars.format(case.createdAt,'yyyy/MM/dd HH:mm')}" style="white-space: nowrap"></td>
             <td th:text="${case.commentCount}" style="vertical-align: middle;text-align: center;"></td>
