--- a/src/main/resources/templates/caseOfIllness/caseOfIllness.html
+++ b/src/main/resources/templates/caseOfIllness/caseOfIllness.html
@@ -11,7 +11,7 @@
         <thead>
         <tr>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>序号</th>
-            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>用户</th>
+            <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>作者</th>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>标题</th>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>内容</th>
             <th style='vertical-align: middle;text-align: center;color: #136387; font-style: italic;font-weight:bold;'>发布时间</th>
