--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,7 +93,7 @@
                     <a href="#about">关于</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="/author">大爷</a>
+                    <a href="/author">亮剑</a>
                 </li>
                 <li class="page-scroll">
                     <a href="/login">登录</a>
@@ -261,8 +261,8 @@
                 </p>
             </div>
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="https://weibo.com/iluosonglin" class="btn btn-lg btn-outline">
-                    <i class="fa fa-download"></i> Sina--关注我
+                <a href="http://weibo.com/u/3292845975" class="btn btn-lg btn-outline">
+                    <i class="fa fa-download"></i> Sina--关注我们
                 </a>
             </div>
         </div>
@@ -282,14 +282,14 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <br/><br/><br/>
                 <p>请发邮件到这里
-                    <a href="mailto:onglinLuo@healife.com">
-                        songlinLuo@healife.com
+                    <a href="mailto:needs@medmeeting.com">
+                        needs@medmeeting.com
                     </a>
                 </p>
                 <br/>
                 <p>或者在sina weibo上面
-                    <a href="https://weibo.com/iluosonglin">
-                        关注我
+                    <a href="http://weibo.com/u/3292845975">
+                        联系我们
                     </a>
                 </p>
                 <!--         <form name="sentMessage" id="contactForm" novalidate="novalidate">
