--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -102,8 +102,8 @@
 //                'name': '',
 //                'password': ''
             //测试用
-            'name': 'haha',
-            'password': '123'
+            'name': 'luosonglin',
+            'password': '123456'
         },
         methods: {
             login: function (event) {
