--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -70,6 +70,36 @@
                     </ul>
                 </li>
                 <li class=" ">
+                    <a data-toggle="collapse" title="会议" href="#meeting">
+                        <em class="icon-folder"></em>
+                        <span>会议管理</span>
+                    </a>
+                    <ul class="nav sidebar-subnav collapse" id="meeting">
+                        <li class="sidebar-subnav-header">会议管理</li>
+
+                        <li id="meeting" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/event/allevent')">
+                                <span>—  所有会议</span>
+                            </a>
+                        </li>
+                        <li id="hotmeeting" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/recommend')">
+                                <span>—  热门会议</span>
+                            </a>
+                        </li>
+                        <li id="newmeeting" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/vip')">
+                                <span>—  最新会议</span>
+                            </a>
+                        </li>
+                        <li id="recommondmeeting" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/vip')">
+                                <span>—  推荐会议</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class=" ">
                     <a data-toggle="collapse" title="收藏夹" href="#weibo">
                         <em class="icon-folder"></em>
                         <span>微博管理</span>
